--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -45,8 +45,9 @@
   flex-direction: column;
   width: 400px;
   background-color: var(--BleuM);
-  margin: 10px 5px;
+  margin: 10px 5px 0 5px;
   border-radius: 10px;
+  padding: 5px;
 }
 
 .icon::hover {
@@ -58,8 +59,10 @@
 }
 
 .movie {
+  margin: 2px;
   display: flex;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.429);
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px 0px black;
 }
 
 .movieImg img {
