--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -34,6 +34,7 @@
 }
 
 .main {
+  height: 80%;
   display: flex;
   justify-content: center;
 }
@@ -46,7 +47,7 @@
   width: 400px;
   background-color: var(--BleuM);
   margin: 10px 5px 0 5px;
-  border-radius: 10px;
+  border-radius: 10px 0px 10px 10px;
   padding: 5px;
 }
 
