--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,14 +13,23 @@
   color: rgba(255, 255, 255, 0.534);
 }
 
+.movie {
+  box-shadow: 0px 0px 5px 0px black;
+}
+
+.activTab {
+  width: 100%;
+  opacity: 1;
+}
+
 .Tabsbutton:hover {
   transition: 1s;
 }
 
-/* #tabs::-webkit-scrollbar {
+#tabs::-webkit-scrollbar {
   display: none;
-} */
+}
 
 .tabsButton {
-  @apply hover:opacity-100 p-1 px-2 flex rounded-xl items-center hover:scale-105 duration-500 hover:transition
+  @apply p-1 px-2 flex rounded-xl items-center hover:scale-105 duration-500 hover:transition hover:opacity-100
 }
